Just small changes

--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,9 @@ body{
 	height: 30px;
 }
 
-/* Second filtr block */
+/* three_filtr_blocks */
 
-.second_filtr_block{
+.three_filtr_blocks{
 	padding-top: 30px;
 }
 .wrapper_2{
