--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,21 @@
-body {
+body{
 	margin: 0;
 	padding: 0;
 	background: #E4E5E7;
+	font-family: 'Montserrat', sans-serif;
+	min-height: 6000px;
 }
-
-.goods {}
+.goods{
+	
+}
 
 /* First filtr block */
 
-.wrapper {
+.wrapper{
 	display: flex;
 	justify-content: center;
 }
-
-.first_filtr_block {
+.first_filtr_block{
 	width: 80%;
 	min-height: 65px;
 	margin-top: 50px;
@@ -24,24 +26,21 @@ body {
 	justify-content: space-around;
 	align-items: center;
 }
-
-.first_filtr_block div {
-	margin: 5px 20px;
+.first_filtr_block div{
+	margin:5px 20px;
 }
-
-.keywords {}
-
-.form-group {
-	margin: 0;
+.keywords{
+	
 }
-
-.keywords .form-group input {
+.form-group{
+	margin:0;
+}
+.keywords .form-group input{
 	width: 160px;
 	border-radius: 15px;
 	height: 30px;
 }
-
-.price .form-group input {
+.price .form-group input{
 	width: 60px;
 	border-radius: 15px;
 	height: 30px;
@@ -49,214 +48,101 @@ body {
 
 /* three_filtr_blocks */
 
-.three_filtr_blocks {
+.three_filtr_blocks{
 	padding-top: 30px;
 }
-
-.wrapper_2 {
-
+.wrapper_2{
 	display: flex;
 	flex-direction: column;
 	margin-right: 30px;
 }
+#m_body li ul { 
+  display: none; 
+  } 
+#m_body li:hover ul, #m_body li.over ul { 
+  display: block; 
+  } 
+  #m_body { 
+  text-align:left; 
+  background: white; 
+  width: 290px;
+  border-radius: 10px;
+  max-height: auto; 
+  } 
+#m_body a { 
+  display: block;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 25px;
+  width: 100%; 
+  }  
 
-#m_body li ul {
-	display: none;
-}
+#m_body ul li { 
+  list-style-type: none; 
+  line-height: 24px; 
+  margin-left: -40px; 
+  padding-left: 0px;
+  }  
 
-#m_body li:hover ul,
-#m_body li.over ul {
-	display: block;
-}
+#m_body ul li a { 
+  color: black; 
+  text-decoration: none; 
+  font-size: 12px; 
+  }  
 
-#m_body {
-	text-align: left;
-	background: white;
-	width: 290px;
-	border-radius: 10px;
-	max-height: auto;
-}
+#m_body ul li a:hover { 
+  color:#FFFFFF; 
+  text-decoration: none; 
+  background:#2C2C2C; 
+  }  
 
-#m_body a {
-	display: block;
-	padding-top: 12px;
-	padding-bottom: 12px;
-	padding-left: 25px;
-	width: 100%;
-}
+#m_body ul li ul li { 
+  border: 0; 
+  list-style-type: none; 
+  list-style-position: inside;
+  color:#BABFCFFF; 
+  background:#F0F2F7FF; 
+  border-bottom:1px solid #ECEEF5; 
+  }  
 
-#m_body ul li {
-	list-style-type: none;
-	line-height: 24px;
-	margin-left: -40px;
-	padding-left: 0px;
-}
+#m_body ul li ul li a{
+	color:#A9AFC2;
+} 
 
-#m_body ul li a {
-	color: black;
-	text-decoration: none;
-	font-size: 12px;
-	font-family: Verdana;
-}
-
-#m_body ul li a:hover {
-	color: #FFFFFF;
-	text-decoration: none;
-	background: #2C2C2C;
-}
-
-#m_body ul li ul li {
-	border: 0;
-	list-style-type: none;
-	list-style-position: inside;
-	color: #BABFCFFF;
-	background: #F0F2F7FF;
-	border-bottom: 1px solid #ECEEF5;
-}
-
-#m_body ul li ul li a {
-	color: #A9AFC2;
-}
-
-#m_body ul li ul li a:hover {
-	color: #BABFCFFF;
-	background: #F0F2F7FF;
-}
-
-ul {
+#m_body ul li ul li a:hover { 
+  color:#BABFCFFF; 
+  background:#F0F2F7FF; 
+  }
+ul{
 	margin-bottom: 0px;
 }
-
-/*++++++++++++++++++++ wrapper-3 +++++++++++++++++ */
-
-.body-3 {
-	margin-top: 30px;
-	padding-left: 20px;
-	text-align: left;
-	background: white;
-	width: 290px;
-	border-radius: 10px;
-	max-height: auto;
-	font-weight: 2em;
-}
-
-.wrapper-3 {
-	margin-top: 30px;
-	background: white;
-
-	display: flex;
-	flex-direction: column;
-	margin-right: 30px;
-	width: 290px;
-	height: 240px;
-}
-
-
-
-#ava {
-	text-align: left;
-	border-bottom: 1em;
-	font-weight: bold;
-	padding-top: 10px;
-}
-
-#stor {
-	text-align: left;
-}
-
-.aval {
-	text-align: left;
-	border-bottom: 2em;
-}
-
-
-/*---------------------wrapper-3+++++++++++++++++ */
-
-/*++++++++++++++++++++ wrapper-4 +++++++++++++++++ */
-
-.body-4 {
-	margin-top: 30px;
-	padding-left: 20px;
-	text-align: left;
-	background: white;
-	width: 290px;
-	border-radius: 10px;
-	max-height: auto;
-	font-weight: 2em;
-
-
-}
-
-/*---------------------wrapper-4+++++++++++++++++ */
-
-/*++++++++++++++++++++ wrapper-5 +++++++++++++++++ */
-
-.body-5 {
-	margin-top: 30px;
-	padding-left: 20px;
-	text-align: left;
-	background: white;
-	width: 290px;
-	border-radius: 10px;
-	max-height: auto;
-	font-weight: 2em;
-	text-align: center;
-	height: 100px;
-
-}
-
-.big-bos {
-	text-align: center;
-	width: 290px;
-	background-color: white;
-}
-
-.line {
-	border-right: 2px solid black;
-	float: left;
-	text-align: center;
-}
-
-.linesa {
-	float: left;
-	padding-left: 20px;
-	text-align: center;
-
-}
-
-/*---------------------wrapper-5+++++++++++++++++ */
-
 /* Goods */
 
-.another_wrapper {
+.another_wrapper{
 	display: flex;
 	margin-left: 10%;
 	margin-right: 10%;
 }
-
-.goods_item {
+.goods_item{
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
 	margin-right: -30px;
 }
-
-.goods_item .item {
+.goods_item .item{
 	background: white;
-	margin: 30px;
+	margin:30px;
 	width: 290px;
 	height: 370px;
 	border-radius: 10px;
 }
-
-.goods_item img {
+.goods_item img{
 	border-radius: 10px;
 	padding-top: 10px;
 	width: 270px;
 	height: 250px;
 }
-
-.text {
+.text{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -265,26 +151,188 @@ ul {
 	margin-top: 0;
 	margin-left: 20%;
 }
-
-.text h4 {
+.text h4{
 	font-size: 16px;
 }
-
-.text h6 {
+.text h6{
 	font-size: 12px;
 }
-
-.text h5 {
+.text h5{
 	font-size: 14px;
 }
 
-@media (max-width: 748px) {
-	.another_wrapper {
+/* second col */
+
+.second_col{
+	margin-top: 30px;
+	background: white;
+	width: 290px;
+	border-radius: 10px;
+}
+.available{
+	width: 100%;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	position: relative;
+}
+.available::after{
+	content: '';
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	bottom: 0px;
+	background: #CECECEFF;
+}
+label{
+	margin:0px;
+	padding-top: 7px;
+	padding-bottom: 7px;
+}
+.val{
+	margin:0px;
+	padding-top: 7px;
+	padding-bottom: 7px;
+}
+.pad{
+	padding-left: 8%;
+	padding-right: 5%;
+}
+
+.brands{
+	position: relative;
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+.brands::before{
+	content: '';
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	top:0px;
+	background: #CECECEFF;
+}
+.brands::after{
+	content: '';
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	bottom: 0px;
+	background: #CECECEFF;
+}
+.second_col .content{
+	
+}
+.third_col{
+	margin-top: 30px;
+	background: white;
+	width: 290px;
+	border-radius: 10px;
+}
+.condition{
+	position: relative;
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+.condition::after{
+	content: '';
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	bottom: 0px;
+	background: #CECECEFF;
+}
+
+/* Pages */
+
+.pages{
+	display: flex;
+	justify-content: center;
+}
+.pages_block{
+	width: 80%;
+	min-height: 65px;
+	margin-top: 50px;
+	background: white;
+	border-radius: 10px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: center;
+}
+.nums{
+	display: flex;
+}
+.nums .nums_item{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 40px;
+	height: 40px;
+	margin:0 10px;
+	font-weight: bold;
+}
+.nums .nums_item:hover{
+	background: white;
+	box-shadow: 0px 15px 40px -8px black;
+	color: #B9BED1FF;
+	border-radius: 50%;
+}
+
+/* Clothes */
+
+.clothes{
+	margin-left: 10%;
+	margin-right: 10%;
+}
+.clothes_block{
+	min-height: 400px;
+	margin-top: 70px;
+	background: white;
+}
+.clothes_row{
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+}
+.clothes_item{
+	width: 285px;
+}
+.clothes_item img{
+	max-width: 200px;
+	height: 240px;
+}
+.sm_title{
+	width: 100%;
+	height: 57px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-weight: bold;
+	border-bottom: 1px solid #cecece;
+}
+
+
+
+
+
+
+
+@media (max-width: 748px){
+	.another_wrapper{
 		display: block;
 	}
-	.wrapper_2 {
+	.wrapper_2{
 		display: flex;
 		justify-content: center;
 		margin-right: 0;
 	}
 }
+
+
+
+
+
