--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,21 @@
-body{
+body {
 	margin: 0;
 	padding: 0;
 	background: #E4E5E7;
 	font-family: 'Montserrat', sans-serif;
 	min-height: 6000px;
 }
-.goods{
-	
-}
+
+.goods {}
 
 /* First filtr block */
 
-.wrapper{
+.wrapper {
 	display: flex;
 	justify-content: center;
 }
-.first_filtr_block{
+
+.first_filtr_block {
 	width: 80%;
 	min-height: 65px;
 	margin-top: 50px;
@@ -26,21 +26,24 @@ body{
 	justify-content: space-around;
 	align-items: center;
 }
-.first_filtr_block div{
-	margin:5px 20px;
+
+.first_filtr_block div {
+	margin: 5px 20px;
 }
-.keywords{
-	
+
+.keywords {}
+
+.form-group {
+	margin: 0;
 }
-.form-group{
-	margin:0;
-}
-.keywords .form-group input{
+
+.keywords .form-group input {
 	width: 160px;
 	border-radius: 15px;
 	height: 30px;
 }
-.price .form-group input{
+
+.price .form-group input {
 	width: 60px;
 	border-radius: 15px;
 	height: 30px;
@@ -48,101 +51,113 @@ body{
 
 /* three_filtr_blocks */
 
-.three_filtr_blocks{
+.three_filtr_blocks {
 	padding-top: 30px;
 }
-.wrapper_2{
+
+.wrapper_2 {
 	display: flex;
 	flex-direction: column;
 	margin-right: 30px;
 }
-#m_body li ul { 
-  display: none; 
-  } 
-#m_body li:hover ul, #m_body li.over ul { 
-  display: block; 
-  } 
-  #m_body { 
-  text-align:left; 
-  background: white; 
-  width: 290px;
-  border-radius: 10px;
-  max-height: auto; 
-  } 
-#m_body a { 
-  display: block;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  padding-left: 25px;
-  width: 100%; 
-  }  
 
-#m_body ul li { 
-  list-style-type: none; 
-  line-height: 24px; 
-  margin-left: -40px; 
-  padding-left: 0px;
-  }  
+#m_body li ul {
+	display: none;
+}
 
-#m_body ul li a { 
-  color: black; 
-  text-decoration: none; 
-  font-size: 12px; 
-  }  
+#m_body li:hover ul,
+#m_body li.over ul {
+	display: block;
+}
 
-#m_body ul li a:hover { 
-  color:#FFFFFF; 
-  text-decoration: none; 
-  background:#2C2C2C; 
-  }  
+#m_body {
+	text-align: left;
+	background: white;
+	width: 290px;
+	border-radius: 10px;
+	max-height: auto;
+}
 
-#m_body ul li ul li { 
-  border: 0; 
-  list-style-type: none; 
-  list-style-position: inside;
-  color:#BABFCFFF; 
-  background:#F0F2F7FF; 
-  border-bottom:1px solid #ECEEF5; 
-  }  
+#m_body a {
+	display: block;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	padding-left: 25px;
+	width: 100%;
+}
 
-#m_body ul li ul li a{
-	color:#A9AFC2;
-} 
+#m_body ul li {
+	list-style-type: none;
+	line-height: 24px;
+	margin-left: -40px;
+	padding-left: 0px;
+}
 
-#m_body ul li ul li a:hover { 
-  color:#BABFCFFF; 
-  background:#F0F2F7FF; 
-  }
-ul{
+#m_body ul li a {
+	color: black;
+	text-decoration: none;
+	font-size: 12px;
+}
+
+#m_body ul li a:hover {
+	color: #FFFFFF;
+	text-decoration: none;
+	background: #2C2C2C;
+}
+
+#m_body ul li ul li {
+	border: 0;
+	list-style-type: none;
+	list-style-position: inside;
+	color: #BABFCFFF;
+	background: #F0F2F7FF;
+	border-bottom: 1px solid #ECEEF5;
+}
+
+#m_body ul li ul li a {
+	color: #A9AFC2;
+}
+
+#m_body ul li ul li a:hover {
+	color: #BABFCFFF;
+	background: #F0F2F7FF;
+}
+
+ul {
 	margin-bottom: 0px;
 }
+
 /* Goods */
 
-.another_wrapper{
+.another_wrapper {
 	display: flex;
 	margin-left: 10%;
 	margin-right: 10%;
 }
-.goods_item{
+
+.goods_item {
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
 	margin-right: -30px;
 }
-.goods_item .item{
+
+.goods_item .item {
 	background: white;
-	margin:30px;
+	margin: 30px;
 	width: 290px;
 	height: 370px;
 	border-radius: 10px;
 }
-.goods_item img{
+
+.goods_item img {
 	border-radius: 10px;
 	padding-top: 10px;
 	width: 270px;
 	height: 250px;
 }
-.text{
+
+.text {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -151,31 +166,36 @@ ul{
 	margin-top: 0;
 	margin-left: 20%;
 }
-.text h4{
+
+.text h4 {
 	font-size: 16px;
 }
-.text h6{
+
+.text h6 {
 	font-size: 12px;
 }
-.text h5{
+
+.text h5 {
 	font-size: 14px;
 }
 
 /* second col */
 
-.second_col{
+.second_col {
 	margin-top: 30px;
 	background: white;
 	width: 290px;
 	border-radius: 10px;
 }
-.available{
+
+.available {
 	width: 100%;
 	padding-top: 15px;
 	padding-bottom: 15px;
 	position: relative;
 }
-.available::after{
+
+.available::after {
 	content: '';
 	display: block;
 	position: absolute;
@@ -184,36 +204,41 @@ ul{
 	bottom: 0px;
 	background: #CECECEFF;
 }
-label{
-	margin:0px;
+
+label {
+	margin: 0px;
 	padding-top: 7px;
 	padding-bottom: 7px;
 }
-.val{
-	margin:0px;
+
+.val {
+	margin: 0px;
 	padding-top: 7px;
 	padding-bottom: 7px;
 }
-.pad{
+
+.pad {
 	padding-left: 8%;
 	padding-right: 5%;
 }
 
-.brands{
+.brands {
 	position: relative;
 	padding-top: 15px;
 	padding-bottom: 15px;
 }
-.brands::before{
+
+.brands::before {
 	content: '';
 	display: block;
 	position: absolute;
 	width: 100%;
 	height: 2px;
-	top:0px;
+	top: 0px;
 	background: #CECECEFF;
 }
-.brands::after{
+
+.brands::after {
 	content: '';
 	display: block;
 	position: absolute;
@@ -222,21 +247,23 @@ label{
 	bottom: 0px;
 	background: #CECECEFF;
 }
-.second_col .content{
-	
-}
-.third_col{
+
+.second_col .content {}
+
+.third_col {
 	margin-top: 30px;
 	background: white;
 	width: 290px;
 	border-radius: 10px;
 }
-.condition{
+
+.condition {
 	position: relative;
 	padding-top: 15px;
 	padding-bottom: 15px;
 }
-.condition::after{
+
+.condition::after {
 	content: '';
 	display: block;
 	position: absolute;
@@ -246,13 +273,45 @@ label{
 	background: #CECECEFF;
 }
 
+/*++++++++++++++++++++ wrapper-4 +++++++++++++++++ */
+
+.four_col {
+	margin-top: 30px;
+	background: white;
+	width: 290px;
+	border-radius: 10px;
+}
+
+.Free {
+	width: 50%;
+	float: left;
+	border-right: 1px solid black;
+	margin: 0px;
+	padding-top: 7px;
+	padding-bottom: 7px;
+	padding-left: 8%;
+	padding-right: 5%;
+
+}
+
+.dolar {
+	width: 50%;
+	float: left;
+    margin: 0px;
+	padding-top: 7px;
+	padding-bottom: 7px;
+	padding-left: 8%;
+	padding-right: 5%;
+}
+
 /* Pages */
 
-.pages{
+.pages {
 	display: flex;
 	justify-content: center;
 }
-.pages_block{
+
+.pages_block {
 	width: 80%;
 	min-height: 65px;
 	margin-top: 50px;
@@ -263,19 +322,22 @@ label{
 	justify-content: space-around;
 	align-items: center;
 }
-.nums{
+
+.nums {
 	display: flex;
 }
-.nums .nums_item{
+
+.nums .nums_item {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	width: 40px;
 	height: 40px;
-	margin:0 10px;
+	margin: 0 10px;
 	font-weight: bold;
 }
-.nums .nums_item:hover{
+
+.nums .nums_item:hover {
 	background: white;
 	box-shadow: 0px 15px 40px -8px black;
 	color: #B9BED1FF;
@@ -284,28 +346,33 @@ label{
 
 /* Clothes */
 
-.clothes{
+.clothes {
 	margin-left: 10%;
 	margin-right: 10%;
 }
-.clothes_block{
+
+.clothes_block {
 	min-height: 400px;
 	margin-top: 70px;
 	background: white;
 }
-.clothes_row{
+
+.clothes_row {
 	display: flex;
 	justify-content: space-around;
 	flex-wrap: wrap;
 }
-.clothes_item{
+
+.clothes_item {
 	width: 285px;
 }
-.clothes_item img{
+
+.clothes_item img {
 	max-width: 200px;
 	height: 240px;
 }
-.sm_title{
+
+.sm_title {
 	width: 100%;
 	height: 57px;
 	display: flex;
@@ -321,18 +388,13 @@ label{
 
 
 
-@media (max-width: 748px){
-	.another_wrapper{
+@media (max-width: 748px) {
+	.another_wrapper {
 		display: block;
 	}
-	.wrapper_2{
+	.wrapper_2 {
 		display: flex;
 		justify-content: center;
 		margin-right: 0;
 	}
 }
-
-
-
-
-
