--- a/Сторінки з товарами/style.css
+++ b/Сторінки з товарами/style.css
@@ -3,6 +3,7 @@ body{
 	padding: 0;
 	background: #E4E5E7;
 	font-family: 'Montserrat', sans-serif;
+	min-height: 7000px;
 }
 input{
 	margin-right: 7px;
@@ -11,14 +12,6 @@ input{
 	
 }
 
-/* Register form */
-
-.register{
-	
-}
-
-
-/*                     Main              */
 /* First filtr block */
 
 .wrapper{
@@ -256,40 +249,7 @@ label{
 	bottom: 0px;
 	background: #CECECEFF;
 }
-/* Сторінки при відкритті товарів */
-.story1{
-width: 100%;
-height: 300px;
-display: flex;
--webkit-justify-content: space-around; /* Safari */
 
- justify-content: space-around;
-
-
-}
-.pricess{
-
-width: 100%;
-}
-
-.fotka1{
-	padding-left: 10%;
-width: 30%;
-height: 250px;
-
-}
-.bada{
-	
-width: 70%;
-height: auto;
-
-
-
-
-}
-.wetra {
-	width: 100%;
-}
 /* Pages */
 
 .pages{
@@ -302,9 +262,6 @@ height: auto;
 	margin-top: 50px;
 	background: white;
 	border-radius: 10px;
-	display: flex;
-    justify-content: space-around;
-    align-items: center;
 	
 }
 .nums{
@@ -400,52 +357,6 @@ height: auto;
 .sup{
 	margin-top: 15px;
 }
-
-/* Footer */
-
-footer{
-	background: #222;
-	color:white;
-	height: 350px;
-}
-.upper_footer{
-	margin-left: 10%;
-	margin-right: 10%;
-	padding-bottom: 65px;
-	border-bottom: 1px solid #2D2E33;
-	margin-bottom: 50px;
-}
-.upper_footer div{
-	margin-top: 60px;
-}
-.portland{
-	font-family: 'Myriad Pro', sans-serif;
-}
-footer ul{
-	display: flex;
-	list-style: none;
-}
-ul li{
-	margin-left: 15px;
-}
-
-.lower_footer{
-	margin-left: 10%;
-	margin-right: 10%;
-	color:#7F7F81;
-	align-items: center;
-	flex-wrap: wrap;
-}
-.lower_footer p{
-	width: 450px;
-}
-.lower_footer span{
-	margin-left: 30px;
-	font-weight: bold;
-}
-.links i {
-	margin-left: 15px;
-}
 @media (max-width: 749px){
 	.another_wrapper{
 		display: block;
@@ -479,7 +390,6 @@ ul li{
 	    margin-bottom: 10px;
 	}
 }
-
 @media (max-width: 877px){
 	.sub{
 		display: flex;
