--- a/css/style.css
+++ b/css/style.css
@@ -375,6 +375,14 @@ footer{
 	color:white;
 	height: auto;
 }
+footer a{
+	text-decoration: none;
+	color:white;
+}
+footer a:hover{
+	text-decoration: none;
+	color:white;
+}
 .upper_footer{
 	margin-left: 10%;
 	margin-right: 10%;
